--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <select type="text" name="item" placeholder="Choose Distance" required>
           <option value="Running">Running</option>
           <option value="Swimming">Swimming</option>
-          <option value="Swimming">Cycling</option>
-          <option value="Swimming">Hiking</option>
-          <option value="Swimming">Treadmill</option>
-          <option value="Swimming">Skiing</option>
-          <option value="Swimming">Triathlon</option>
-          <option value="Swimming">Gym</option>
+          <option value="Cycling">Cycling</option>
+          <option value="Hiking">Hiking</option>
+          <option value="Treadmill">Treadmill</option>
+          <option value="Skiing">Skiing</option>
+          <option value="Triathlon">Triathlon</option>
+          <option value="Gym">Gym</option>
         </select>
         <input type="number" name="item2" placeholder="Enter the distance" required>
         <input type="number" name="item3" placeholder="Enter hours"required>
